[gd_scene load_steps=3 format=3 uid="uid://sj6encq31pwa"]

[ext_resource type="Theme" uid="uid://cdc4f0k64k8bs" path="res://agonia_theme.tres" id="1_dei4x"]
[ext_resource type="Script" path="res://UI/Windows/edit_tile_window.gd" id="2_yobom"]

[node name="EditTileWindow" type="Window"]
title = "Edit Tile"
initial_position = 1
size = Vector2i(319, 437)
unresizable = true
theme = ExtResource("1_dei4x")
script = ExtResource("2_yobom")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(319, 437)
offset_right = 10.0
offset_bottom = 10.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="LocationLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLabel"
text = "Location Details [xxx,yyy]"

[node name="MapImageHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MapImageHBox"]
layout_mode = 2
text = "Map-"

[node name="LineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/MapImageHBox"]
layout_mode = 2

[node name="TerrainOptions" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 1
selected = 0
fit_to_longest_item = false
popup/item_0/text = "Terrain"
popup/item_0/id = 99

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MinesVBox" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Header" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MinesVBox"]
layout_mode = 2
theme_type_variation = &"HeaderLabel"
text = "Mines"

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MinesVBox"]
visible = false
layout_mode = 2

[node name="AddMineHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MinesVBox"]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/MinesVBox/AddMineHBox"]
layout_mode = 2

[node name="AddMineButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MinesVBox/AddMineHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Add"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TownVBox" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Header" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/TownVBox"]
layout_mode = 2
theme_type_variation = &"HeaderLabel"
text = "Town"

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/TownVBox"]
visible = false
layout_mode = 2

[node name="AddTownButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/TownVBox"]
layout_mode = 2
text = "Add"

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="UpdateButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Update Tile"

[connection signal="close_requested" from="." to="." method="hide"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MinesVBox/AddMineHBox/AddMineButton" to="." method="_on_add_mine_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/TownVBox/AddTownButton" to="." method="_on_add_town_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/UpdateButton" to="." method="_on_update_button_pressed"]
